# gender-disparity

./: .gitignore  Data_analysis.ipynb  Progress.ipynb  README.md  pyproject.toml
docs/: Proposal.md
notebook/: gender_disparity.ipynb
