[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.12"
dependencies = [
    "geocoder>=1.38.1",
    "geonamescache>=3.0.0",
    "geopandas>=1.1.3",
    "geoplot>=0.5.1",
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pandas-datareader>=0.10.0",
    "plotly>=6.6.0",
    "plotnine>=0.15.3",
    "pycountry>=26.2.16",
    "requests>=2.32.5",
    "scipy-stubs>=1.17.1.1",
    "seaborn>=0.13.2",
    "stargazer>=0.0.7",
]
